--- a/prototype/package.json
+++ b/prototype/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.1"
+    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.1",
+    "type": "module"
   }
 }
