--- a/prototype/package.json
+++ b/prototype/package.json
@@ -3,7 +3,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fetch": "^1.1.0",
-    "node-fetch": "^3.3.1",
-    "type": "module"
+    "node-fetch": "^2.6.9",
+    "steamapi": "^2.2.0"
   }
 }
